[package]
name = "icepick"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
rusqlite = "0.34.0"
chrono = "0.4.40"
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
url = "2.5.4"
scraper = "0.23.1"
zstd = "0.13.3"
uuid = { version = "1.16.0", features = ["v4"] }